# DeGene

./: LICENSE  README.md  config.yaml  requirements.txt
src/: access.py  storage.py
src/analysis/: genome_analyzer
src/api/: server.py
src/api/middleware/: auth.py  rate_limit.py
src/api/models/: genome.py  user.py
src/api/routes/: auth.py  genome.py
src/api/schemas/: auth.py  genome.py
src/api/services/: blockchain.py  storage.py
src/blockchain/: ownership.py  transaction.py  verification.py
src/blockchain/smart_contracts/: Cargo.toml  genome_storage.rs
src/genomics/: __init__.py  analysis.py  compression.py  core.py  epigenetics.py  evolution.py  expression.py  structure.py
src/processing/: batch_processor
src/visualization/: genome_visualizer
tests/: test_compression.py
